--- a/server/package.json
+++ b/server/package.json
@@ -16,10 +16,12 @@
     "express": "~4.15.5",
     "jade": "~1.11.0",
     "jwt-simple": "^0.5.1",
+    "mailgun-js": "^0.16.0",
     "mongoose": "^5.0.9",
     "morgan": "~1.9.0",
     "multer": "^1.3.0",
     "multer-storage-cloudinary": "^2.2.1",
+    "nodemailer": "^4.6.3",
     "passport": "^0.4.0",
     "passport-jwt": "^4.0.0",
     "passport-local-mongoose": "^5.0.0",
