--- a/server/package.json
+++ b/server/package.json
@@ -7,6 +7,8 @@
     "dev": "nodemon ./bin/www"
   },
   "dependencies": {
+    "@types/algoliasearch": "^3.24.9",
+    "algoliasearch": "^3.26.0",
     "body-parser": "~1.18.2",
     "cloudinary": "^1.10.0",
     "cookie-parser": "~1.4.3",
