--- a/client/package.json
+++ b/client/package.json
@@ -9,7 +9,7 @@
     "node-sass-chokidar": "^1.2.2",
     "npm-run-all": "^4.1.2",
     "popper.js": "^1.14.3",
-    "query-string": "^6.0.0",
+    "querystring": "^0.2.0",
     "react": "^16.3.1",
     "react-dom": "^16.3.1",
     "react-router-dom": "^4.2.2",
