--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "express-validator": "^5.0.3",
+    "node-sass": "^4.9.0",
     "nodemailer": "^4.6.3",
     "randomstring": "^1.1.5"
   }
