--- a/client/package.json
+++ b/client/package.json
@@ -11,7 +11,7 @@
     "popper.js": "^1.14.3",
     "querystring": "^0.2.0",
     "react": "^16.3.1",
-    "react-dom": "^16.3.1",
+    "react-dom": "16.2.1",
     "react-router-dom": "^4.2.2",
     "react-scripts": "1.1.1",
     "reactstrap": "^5.0.0-beta.3"
